--- a/src/main/resources/pagination-sorting-db.properties
+++ b/src/main/resources/pagination-sorting-db.properties
@@ -1,5 +1,5 @@
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+jdbc.driverClassName=org.h2.Driver
+questions.jdbc.url=jdbc:h2:mem:spring_jpa_questions;DB_CLOSE_DELAY=-1;INIT=CREATE SCHEMA IF NOT EXISTS QUESTIONS
+jdbc.user=sa
+jdbc.pass=sa
+hibernate.hbm2ddl.auto=create-drop
